# sia-storage-app

./: .env.example  .gitignore  .oxlintrc.json  .prettierignore  CHANGELOG.md  README.md  ROADMAP.md  app.config.js  app.json  biome.json  bunfig.toml  eas.json  index.ts  jest.config.cjs  jest.core.config.cjs  jest.setup.cjs  knip.json  knope.toml  metro.config.js  package-lock.json  package.json  polyfills.ts  tsconfig.json
.changes/: feat-background-task-diagnostics.md  feat-e2e-testing.md  fix-background-keychain-access.md  fix-logger-db-init.md
.changeset/: README.md  abortable-cache-eviction.md  abortable-download-slots.md  abortable-orphan-scanner.md  add-directories.md  add-error-boundary.md  add-perf-monitor.md  add-pinned-size-to-indexer-settings.md  add-search.md  add-tags.md  add-tiff-support.md  android-32-bit-launch-fix.md  android-chin-bar-bottom-controls.md  android-save-to-device.md  android-video-import-resolve.md  archive-cross-device-dedup.md  archive-sync-oneshot.md  archive-sync-spinner.md  archive-sync-threshold.md  archive-sync-ui.md  async-fs-hot-paths.md  auto-prune-slabs.md  auto-thumbnail-download-priority.md  batch-log-writes.md  batch-sync-down.md  batch-thumbnail-size-queries.md  batch-upload-manager.md  bg-processing-requires-charging.md  bg-task-suspension-ownership.md  bg-task-swr-disable.md  bulk-db-apis.md  bump-react-native-sia-0.14.md  bump-rn-sia-0.13.22.md  cache-eviction-fs-apis.md  cli-bun-image-thumbnails.md  cli-connect-command.md  cli-download-command.md  cli-file-commands.md  cli-query-commands.md  cli-scaffold-daemon.md  (+329 more)
crates/: Cargo.toml  README.md
crates/sia-storage-core/: Cargo.toml
crates/sia-storage-core/src/: config.rs  db.rs  encoding.rs  lib.rs  lib_utils.rs  types.rs
crates/sia-storage-core/src/db/: database.rs  migrations.rs  mod.rs  operations.rs  runner.rs  sql.rs  types.rs
crates/sia-storage-core/src/db/migrations/: m0001_init_schema.rs  m0002_object_needs_sync_up.rs  mod.rs
crates/sia-storage-core/src/db/operations/: directories.rs  files.rs  filter.rs  local_objects.rs  logs.rs  mod.rs  tags.rs  trash.rs
crates/sia-storage-core/src/encoding/: file_metadata.rs  local_object.rs  mod.rs  slabs.rs  timestamp.rs
crates/sia-storage-core/src/lib_utils/: detect_mime_type.rs  file_types.rs  mod.rs  natural_sort_key.rs  time.rs  unique_id.rs
crates/sia-storage-core/src/types/: files.rs  local_object.rs  mod.rs  slabs.rs
fastlane/: .gitignore  Fastfile  README.md
mocks/: expo-file-system.ts  fs.ts
patches/: expo-sqlite@55.0.10.patch  react-native-fs@2.20.0.patch
plugins/: android-background-fetch-maven.js  android-release-signing.js  ios-target-16.js
scripts/: android-gradle-task.ts  androidGradleTask.ts  build-cache.ts  build.ts  buildCache.ts  ci-test-build-android.ts  ci-test-build-ios.ts  ciTestBuildAndroid.ts  ciTestBuildIos.ts  create-migration.ts  create-release-pr.ts  dev.ts  e2e-run-local.ts  e2e-run.ts  e2e.ts  e2eCi.ts  progress.ts  release-android.ts  release-ios.ts  releaseAndroid.ts  releaseIos.ts  start.ts  sync-app-version.ts  syncAppVersion.ts
src/: App.tsx  ConnectScreen.tsx  FileScreen.tsx  LoadingScreen.tsx  Root.tsx  Upload.tsx  settings.tsx
test/: README.md  app-boot.test.ts  connectivity.test.ts  file-status-updates-progress.test.ts  full-lifecycle.test.ts  multi-device-convergence.test.ts  multi-device-sync.test.ts  onboarding.test.ts  scanner-deprioritizes-errors.test.ts  slab-batching.test.ts  stale-uploaded-status.test.ts  state-transitions.test.ts  sync-down.test.ts  sync-up-metadata.test.ts  thumbnail-generation-batch.test.ts  (+2 more)
(+1073 files in other folders)
