[workspace]
resolver = "2"
members = ["sia-storage-core"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled", "array"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"

[workspace.lints.rust]
unused_imports = "warn"
