[workspace]
resolver = "2"
members = ["sia-storage-core"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.3"
hex = "0.4"
indexmap = "2"
rusqlite = { version = "0.32", features = ["bundled", "array"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sia_storage = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"

[workspace.lints.rust]
unused_imports = "warn"
