[package]
name = "sia-storage-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[lib]
# No doc examples; the doctest pass is a full rustdoc recompile for nothing. Re-enable if doc examples are added.
doctest = false
